<resources>
    <!-- App Name -->
    <string name="app_name">Shelf Life</string>

    <!-- Default Web Client ID -->
    <string name="default_web_client_id">1096875383271-iltoi30htgc5bhsh7jfafq0213f65cd4.apps.googleusercontent.com</string>

    <!-- Screen Titles -->
    <string name="add_food_item_title">Add Food Item</string>
    <string name="edit_food_item_title">Edit Food Item</string>
    <string name="first_food_item_title">Choose Food Item Name</string>
    <string name="choose_food_item_title">Choose Food Item Image</string>
    <string name="finalize_food_item_title">Finalize Food Item</string>
    <string name="easteregg_title">How did you get here ?</string>

    <!-- Input Field Hints -->
    <string name="food_name_hint">Enter food name</string>
    <string name="amount_hint">Enter amount</string>
    <string name="unit_label">Select unit</string>
    <string name="category_label">Select category</string>
    <string name="location_label">Select location</string>
    <string name="expire_date_hint">Enter expiration date</string>
    <string name="open_date_hint">Enter open date</string>
    <string name="buy_date_hint">Enter purchase date</string>

    <!-- Date Placeholder -->
    <string name="date_placeholder">dd/mm/yyyy</string>

    <!-- Buttons -->
    <string name="submit_button_text">Submit</string>
    <string name="next_button_text">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="back_button">Back</string>
    <string name="add_button">Add</string>
    <string name="save_button">Save</string>
    <string name="regenerate_button">Regenerate</string>
    <string name="modify_button">Modify</string>
    <string name="generate_button">Generate</string>


    <!-- Error Messages -->
    <string name="submission_error_message">Please correct the errors before submitting</string>
    <string name="open_date_before_buy_date_error">Open Date cannot be before Buy Date</string>
    <string name="expire_date_before_buy_date_error">Expire Date cannot be before Buy Date</string>
    <string name="expire_date_in_past_error">Expire Date cannot be in the past</string>
    <string name="open_date_after_expire_date_error">Open Date cannot be after Expire Date</string>
    <string name="amount_empty_error">Amount cannot be empty</string>
    <string name="amount_not_number_error">Amount must be a number</string>
    <string name="amount_negative_error">Amount must be positive</string>
    <string name="food_name_empty_error">Food name cannot be empty</string>
    <string name="food_name_invalid_error">Food name contains invalid characters</string>
    <string name="date_empty_error">Date cannot be empty</string>
    <string name="date_invalid_format_error">Date must be in ddMMyyyy format</string>
    <string name="date_invalid_error">Invalid date</string>
    <string name="date_incomplete_error">Incomplete date</string>
    <string name= "image_not_loading_error">Could not fetch Images, please check your connection and try again later</string>

    <!-- Toast Messages -->
    <string name="food_added_message">Food item added.</string>
    <string name="error_uploading_recipe_message">Error uploading recipe, please try again</string>

    <!-- Accessibility Descriptions -->
    <string name="go_back_button_description">Go Back</string>
    <string name="add_recipe_button_description">Add Recipe</string>
    <string name="generate_recipe_button_description">Generate Recipe</string>
    <string name="food_image_description">Food Image</string>

    <!-- Miscellaneous -->
    <string name="no_recipes_available">No recipes available</string>
    <string name="search_recipes_placeholder">Search recipes</string>
    <string name="icon_for_recipes_search_bar">Icon for recipes search bar</string>

    <!-- Recipe generation -->


    <!-- Food Item Details -->
    <string name="food_item_details_title">What is the food item you want to add today?</string>
    <string name="food_item_choose_manual">Not happy with any of the choices :( . Try manually entering the details</string>
    <string name="food_item_manual_alternative">"Enter Details Manually"</string>
    <string name="food_item_no_expiry_date">No Expiry Date</string>
    <string name="food_item_not_opened">Not Opened</string>
    <string name="food_item_category_label">Category: %1$s</string>
    <string name="food_item_location_label">Location: %1$s</string>
    <string name="food_item_status_label">Status: %1$s</string>
    <string name="food_item_expiry_date_label">Expiry Date: %1$s</string>
    <string name="food_item_open_date_label">Open Date: %1$s</string>
    <string name="food_item_buy_date_label">Buy Date: %1$s</string>
    <string name="food_item_energy_label">Energy: %1$d Kcal</string>
    <string name="food_item_proteins_label">Proteins: %1$s g</string>
    <string name="food_item_quantity_label">Quantity: %1$s %2$s</string>

    <string name="title_of_AddRecipeScreen">Add your own recipe</string>
    <string name="title_of_recipe">Recipe title</string>
    <string name="recipe_title_empty_error">Recipe title cannot be empty</string>
    <string name="recipe_title_invalid_error">Recipe title contains invalid characters</string>
    <string name="servings">Servings</string>
    <string name="servings_empty_error">Servings cannot be empty</string>
    <string name="servings_not_number_error">Servings must be a number</string>
    <string name="servings_negative_error">Servings must be positive</string>
    <string name="time">Time in minutes</string>
    <string name="time_empty_error">Time cannot be empty</string>
    <string name="time_not_number_error">Time must be a number</string>
    <string name="time_negative_error">Time must be positive</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_empty_error">Instruction cannot be empty</string>
    <string name="instructions_invalid_error">Instruction contains invalid characters</string>
    <string name="instruction_step">Step %1$s</string>
    <string name="ingredient_item">%1$s.  %2$s %3$s %4$s</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="ingredient_name_empty_error">Name cannot be empty</string>
    <string name= "ingredient_name_invalid_error">Name contains invalid characters</string>
    <string name="ingredient_quantity">Quantity</string>
    <string name="ingredient_quantity_empty_error">Quantity cannot be incomplete</string>
    <string name="ingredient_quantity_not_number_error">Quantity must be a number</string>
    <string name="ingredient_quantity_negative_error">Quantity must be positive</string>
    <string name="add_ingredient">Add Ingredient</string>

    <string name="select_image_label">Select an Image:</string>
    <string name="no_image_option">No Image</string>
    <string name="selected_image_label">Selected Image:</string>
    <string name="default_image_label">Default Image Selected:</string>
    <string name="submit_button_label">Submit</string>
    <string name="correct_errors_message">Please correct the errors before submitting.</string>
    <string name="food_name_error_empty">Food name cannot be empty.</string>
    <string name="food_name_error_invalid">Food name contains invalid characters.</string>
    <string name="amount_error_empty">Amount cannot be empty.</string>
    <string name="amount_error_not_number">Amount must be a number.</string>
    <string name="amount_error_negative">Amount must be positive.</string>

</resources>
